--- a/dash_app/assets/layouts.css
+++ b/dash_app/assets/layouts.css
@@ -1,5 +1,8 @@
 .section-container {
+    border-radius: 25px;
     position: relative;
-    width:80%;
+    width:95%;
     background-color: lightcyan;
+    margin: 20px 20px 20px 20px;
+    padding: 20px 20px 20px 20px;
 }
