--- a/dash_app/assets/layouts.css
+++ b/dash_app/assets/layouts.css
@@ -7,6 +7,13 @@
     padding: 20px 20px 20px 20px;
 }
 
+.section-container-text {
+    position: relative;
+    width:60%;
+    margin: 20px 20px 20px 20px;
+    padding: 20px 20px 20px 20px;
+}
+
 button {
     /*margin: 20px 20px 0px 20px;*/
 }
